--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
   </div>
 
   <!-- アニメーション本体（中央表示でループ） -->
-  <div style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 2;">
+  <div style="position: fixed; top: 10%; left: 11%; transform: translate(-50%, -50%); z-index: 2;">
     <lottie-player
       src="./data.json"
       background="transparent"
       speed="1"
-      style="width: 1600px; height: 1600px;"
+      style="width: 400px; height: 400px;"
       loop
       autoplay>
     </lottie-player>
@@ -39,5 +39,20 @@
   <!-- カスタムカーソル -->
 <div class="cursor-main"></div>
 <div class="cursor-trail"></div>
+
+<header class="site-header">
+  <nav class="site-nav">
+    <ul>
+      <li><a href="#works">WORKS</a></li>
+      <li><a href="#about">ABOUT</a></li>
+      <li><a href="#contact">CONTACT</a></li>
+    </ul>
+  </nav>
+</header>
+
+<!-- Adobe Fontsの例（コードはAdobeで取得） -->
+<link rel="stylesheet" href="https://use.typekit.net/xxxxxx.css">
+
+
 </body>
 </html>
