--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 <body>
   <!-- 背景動画 -->
-  <video autoplay muted loop playsinline class="background-video">
-    <source src="haikei.mp4" type="video/mp4" />
-  </video>
+<video autoplay muted loop playsinline preload="auto">
+  <source src="haikei.mp4" type="video/mp4">
+</video>
+
 
   <!-- 中央テキスト -->
   <div class="center-text">
