--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       src="./data.json"
       background="transparent"
       speed="1"
-      style="width: 400px; height: 400px;"
+      style="width: 400px; height: 400px; background: transparent; opacity: 0.3;"
       loop
       autoplay>
     </lottie-player>
